// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders a money icon 1`] = `
<span>
  <i
    className="fa fa-money"
  />
</span>
`;

exports[`Icon renders a spinning money icon 1`] = `
<span>
  <i
    className="fa fa-money fa-spin"
  />
</span>
`;
